--- a/output/index.html
+++ b/output/index.html
@@ -5,7 +5,7 @@
     </title>
     <base href='/' />
     <script>
-      if (location.protocol == 'file:' || location.pathname.indexOf('output') > -1) {
+      if (location.protocol == 'file:') {
       var base = document.getElementsByTagName('base')[0]
       base.setAttribute('href', '.')
       }
