--- a/output/index.html
+++ b/output/index.html
@@ -122,6 +122,13 @@
           </section>
         </section>
       </div>
+      <div class='introduction'>
+        <section>
+          <blockquote>
+<p>Профессия звукорежиссёра прошла путь от выполнения чисто технической функции в области звукозаписи до полного творческого участия <a href='.'>в создании произведений искусства&#8230;</a></p>
+</blockquote>
+        </section>
+      </div>
       <main>
         <section>
           <menu>
@@ -146,9 +153,6 @@
               </a>
             </li>
           </menu>
-          <blockquote>
-<p>Профессия звукорежиссёра прошла путь от выполнения чисто технической функции в области звукозаписи до полного творческого участия <a href='.'>в создании произведений искусства&#8230;</a></p>
-</blockquote>
           <ul class='grid'>
             <li class='video selected'>
               <h2>
