Simplify some stuff

--- a/output/index.html
+++ b/output/index.html
@@ -60,7 +60,7 @@
             </menu>
           </nav>
         </section>
-        <div class='player compact'>
+        <div class='player compact' hidden='hidden'>
           <section>
             <div class='progress' max='100' value='50'>
               <strong>
