--- a/output/index.html
+++ b/output/index.html
@@ -53,10 +53,7 @@
                   About me
                 </a>
               </li>
-              <li>
-                <a class='russian language' href='/'>
-                  По-русски
-                </a><a class='russian language icon' href='/'></a></li>
+              <li><a class='russian language' href='/'>По-русски</a><a class='russian language icon' href='/'></a></li>
             </menu>
           </nav>
         </section>
@@ -125,7 +122,7 @@
       <div class='introduction'>
         <section>
           <blockquote>
-<p>Профессия звукорежиссёра прошла путь от выполнения чисто технической функции в области звукозаписи до полного творческого участия <a href='.'>в создании произведений искусства&#8230;</a></p>
+<p><a href='.'>Профессия</a> звукорежиссёра <a href='.'>прошла путь</a> от выполнения <a href='.'>чисто технической функции</a> в области <a href='.'>звукозаписи</a> до полного <a href='.'>творческого участия</a> в создании <a href='.'>произведений искусства</a>.</p>
 </blockquote>
         </section>
       </div>
@@ -164,7 +161,7 @@
                 <dt>Author & performer</dt>
                 <dd title='4th Grushensky Festival Winner'>Anvar Ismagilov</dd>
                 <dt>Guitar</dt>
-                <dd>Andrey Zloyan</dd>
+                <dd title='All in all a nice guy'>Andrey Zloyan</dd>
                 <dt>Keyboard</dt>
                 <dd>Valery Drozd</dd>
                 <dt>Drums</dt>
@@ -416,10 +413,7 @@
             About me
           </a>
         </li>
-        <li>
-          <a class='russian language' href='/'>
-            По-русски
-          </a><a class='russian language icon' href='/'></a></li>
+        <li><a class='russian language' href='/'>По-русски</a><a class='russian language icon' href='/'></a></li>
       </menu>
     </footer>
   </body>
