--- a/output/en/audio/best-thing/index.html
+++ b/output/en/audio/best-thing/index.html
@@ -67,7 +67,7 @@
                   </a>
                 </li>
                 <li>
-                  <a href='/about/experience'>
+                  <a href='/about'>
                     Resume
                   </a>
                 </li>
@@ -155,7 +155,7 @@
     </div>
     <footer>
       <p>
-        <a href='/about/experience'>
+        <a href='/about'>
           Since 1957 and going strong
         </a>
       </p>
