--- a/output/ru/about/services/index.html
+++ b/output/ru/about/services/index.html
@@ -17,7 +17,7 @@
           document.onclick = function(e) {
             for (var el = e.target; el && el.nodeType != 9; el = el.parentNode) {
               var href = el.getAttribute('href');
-              if (href) {
+              if (href && el.host == location.host) {
                 // convert absolute path into relative path
                 if (href.charAt(0) == '/')
                   href = href.substring(1);
@@ -30,7 +30,6 @@
                     href += '/'
                   href += 'index.html';
                 }
-                  console.error(href)
                 if (href != el.getAttribute('href')) {
                   el.setAttribute('href', href);
                   e.preventDefault();
@@ -68,7 +67,7 @@
                   </a>
                 </li>
                 <li>
-                  <a href='/about/experience'>
+                  <a href='/about'>
                     Резюме
                   </a>
                 </li>
@@ -172,7 +171,7 @@
 Жанры: эстрадная музыка, рок, шансон, романс, рэп, мюзикл, песни к спектаклям, кинофильмам и т.д.</li>
   <li>Написание текста на имеющуюся музыку</li>
   <li>Написание музыки  на имеющиеся стихи</li>
-  <li>Написание песни (муз. + стихи)</li>
+  <li>Написание песни (музыка и стихи)</li>
   <li>Написание цикла песен</li>
 </ul>
 
@@ -205,12 +204,12 @@
           </a>
         </li>
         <li>
-          <a href='/about/experience'>
+          <a href='/about'>
             Резюме
           </a>
         </li>
         <li>
-          <a class='english language' href='/en'>in english</a><a class='english language icon' href='/en'></a></li>
+          <a class='english language' href="/en/about/services/index.html">in english</a><a class='english language icon' href="/en/about/services/index.html"></a></li>
       </menu>
     </footer>
   </body>
