--- a/output/ru/about/sound/index.html
+++ b/output/ru/about/sound/index.html
@@ -17,7 +17,7 @@
           document.onclick = function(e) {
             for (var el = e.target; el && el.nodeType != 9; el = el.parentNode) {
               var href = el.getAttribute('href');
-              if (href) {
+              if (href && el.host == location.host) {
                 // convert absolute path into relative path
                 if (href.charAt(0) == '/')
                   href = href.substring(1);
@@ -30,7 +30,6 @@
                     href += '/'
                   href += 'index.html';
                 }
-                  console.error(href)
                 if (href != el.getAttribute('href')) {
                   el.setAttribute('href', href);
                   e.preventDefault();
@@ -68,7 +67,7 @@
                   </a>
                 </li>
                 <li>
-                  <a href='/about/experience'>
+                  <a href='/about'>
                     Резюме
                   </a>
                 </li>
@@ -155,7 +154,9 @@
         <section>
           <h1 id="section">Звуковой образ</h1>
 
-<p>За время появления фонографа Эдисона. Первых экспериментов, открытий и изобретений в области науки и техники, подготовивших почву для появления 20-30г.г.  ХХ века новой области  творческой деятельности – звукорежиссуры, обладающей своими специфическими средствами художественной  выразительности, профессия звукорежиссёра прошла путь от выполнения чисто технической функции в области звукозаписи до полного творческого участия в создании произведений искусства. Творческая задача звукорежиссёра, основана на процессе создания звукового – звукозрительного образа, особыми средствами художественной выразительности, предполагающими синтез художественных и технических задач.  Развитие компьютерной техники в конце 20-го века, дало звукорежиссёру широкие  возможности по созданию звукового образа. По управлению параметрами звука и использованию синтезированных звучаний. </p>
+<p>Со времени появления фонографа Эдисона, первых экспериментов случилось много открытий и изобретений в области науки и техники, подготовивших почву для появления 20-30г.г.  ХХ века новой области творческой деятельности – звукорежиссуры, обладающей своими специфическими средствами художественной  выразительности. С тех пор профессия звукорежиссёра прошла путь от выполнения чисто технической функции в области звукозаписи до полного творческого участия в создании произведений искусства. </p>
+
+<p>Творческая задача звукорежиссёра, основана на процессе создания звукозрительного образа особыми средствами художественной выразительности, предполагающими синтез художественных и технических задач.  Развитие компьютерной техники в конце 20-го века, дало звукорежиссёру широкие  возможности по созданию звукового образа. По управлению параметрами звука и использованию синтезированных звучаний. </p>
 
 <p><img src="photos/recording.jpg" alt="" /></p>
 
@@ -165,7 +166,7 @@
 
 <p>Создание звукового баланса было и остаётся, одной из труднейших художественных задач звукорежиссёра. Впоследствии, к нему прибавилась  и правильность микширования звучаний различных источников, воспринимаемых разными микрофонами. </p>
 
-<p>Важнейшим этапом в работе звукорежиссёра, определяющим результаты  в создании звукового образа, является не только баланс звучания, правильный выбор микрофонов, но и их оптимальное согласование с параметрами помещения, (временем реверберации, радиусом гулкости), и акустическими свойствами источников звука, с учётом жанра и стиля музыки, характер исполнения. Существенные расширения и обогащение технических возможностей, внедрение цифровой техники, компьютерных монтажных станций, многоканальных систем пространственной звукопередачи, процессоров обработки звука, процессоров спецэффектов, позволило перейти к этапу создания принципиально новых технологий, в создании звукового – звукозрительного образа.</p>
+<p>Важнейшим этапом в работе звукорежиссёра, определяющим результаты  в создании звукового образа, является не только баланс звучания, правильный выбор микрофонов, но и их оптимальное согласование с параметрами помещения (временем реверберации, радиусом гулкости), и акустическими свойствами источников звука, с учётом жанра и стиля музыки, характера исполнения. Существенные расширения и обогащение технических возможностей, внедрение цифровой техники, компьютерных монтажных станций, многоканальных систем пространственной звукопередачи, процессоров обработки звука, процессоров спецэффектов, позволило перейти к этапу создания принципиально новых технологий, в создании звукового – звукозрительного образа.</p>
 
 
         </section>
@@ -190,12 +191,12 @@
           </a>
         </li>
         <li>
-          <a href='/about/experience'>
+          <a href='/about'>
             Резюме
           </a>
         </li>
         <li>
-          <a class='english language' href='/en'>in english</a><a class='english language icon' href='/en'></a></li>
+          <a class='english language' href="/en/about/sound/index.html">in english</a><a class='english language icon' href="/en/about/sound/index.html"></a></li>
       </menu>
     </footer>
   </body>
