--- a/output/ru/audio/in-the-skies/index.html
+++ b/output/ru/audio/in-the-skies/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>
-      В небесах
+      In The Skies
       &mdash; Александр Федоров
     </title>
     <base href='/' />
@@ -17,7 +17,7 @@
           document.onclick = function(e) {
             for (var el = e.target; el && el.nodeType != 9; el = el.parentNode) {
               var href = el.getAttribute('href');
-              if (href) {
+              if (href && el.host == location.host) {
                 // convert absolute path into relative path
                 if (href.charAt(0) == '/')
                   href = href.substring(1);
@@ -30,7 +30,6 @@
                     href += '/'
                   href += 'index.html';
                 }
-                  console.error(href)
                 if (href != el.getAttribute('href')) {
                   el.setAttribute('href', href);
                   e.preventDefault();
@@ -68,7 +67,7 @@
                   </a>
                 </li>
                 <li>
-                  <a href='/about/experience'>
+                  <a href='/about'>
                     Резюме
                   </a>
                 </li>
@@ -153,7 +152,9 @@
       </div>
       <main>
         <section>
-          <dl>
+          <h2 id="httpwwwyoutubecomwatchv2ib7ndusboo"><a href="http://www.youtube.com/watch?v=2IB7NDUSBOo">В небесах</a></h2>
+
+<dl>
   <dt>Автор-исполнитель</dt>
   <dd><em title="Лауреат 4го Грушенского фестиваля">Анвар Исмагилов</em></dd>
   <dt>Гитара</dt>
@@ -188,12 +189,12 @@
           </a>
         </li>
         <li>
-          <a href='/about/experience'>
+          <a href='/about'>
             Резюме
           </a>
         </li>
         <li>
-          <a class='english language' href='/en'>in english</a><a class='english language icon' href='/en'></a></li>
+          <a class='english language' href="/en/audio/in-the-skies/index.html">in english</a><a class='english language icon' href="/en/audio/in-the-skies/index.html"></a></li>
       </menu>
     </footer>
   </body>
