--- a/output/en/audio/in-the-skies/index.html
+++ b/output/en/audio/in-the-skies/index.html
@@ -67,7 +67,7 @@
                   </a>
                 </li>
                 <li>
-                  <a href='/about/experience'>
+                  <a href='/about'>
                     Resume
                   </a>
                 </li>
@@ -146,7 +146,9 @@
       </div>
       <main>
         <section>
-          <dl>
+          <h2 id="in-the-skieshttpwwwyoutubecomv2ib7ndusboo"><a href="http://www.youtube.com/v/2IB7NDUSBOo">In the skies</a></h2>
+
+<dl>
   <dt>Author &amp; performer</dt>
   <dd><em title="4th Grushensky festival winner">Anvar Ismagilov</em></dd>
   <dt>Guitar</dt>
@@ -165,7 +167,7 @@
     </div>
     <footer>
       <p>
-        <a href='/about/experience'>
+        <a href='/about'>
           Since 1957 and going strong
         </a>
       </p>
