--- a/output/ru/video/great-video/index.html
+++ b/output/ru/video/great-video/index.html
@@ -17,7 +17,7 @@
           document.onclick = function(e) {
             for (var el = e.target; el && el.nodeType != 9; el = el.parentNode) {
               var href = el.getAttribute('href');
-              if (href) {
+              if (href && el.host == location.host) {
                 // convert absolute path into relative path
                 if (href.charAt(0) == '/')
                   href = href.substring(1);
@@ -30,7 +30,6 @@
                     href += '/'
                   href += 'index.html';
                 }
-                  console.error(href)
                 if (href != el.getAttribute('href')) {
                   el.setAttribute('href', href);
                   e.preventDefault();
@@ -68,7 +67,7 @@
                   </a>
                 </li>
                 <li>
-                  <a href='/about/experience'>
+                  <a href='/about'>
                     Резюме
                   </a>
                 </li>
@@ -153,7 +152,7 @@
       </div>
       <main>
         <section>
-          <p>Привет мир</p>
+          <h2 id="httpwwwyoutubecomwatchvfs1udniptvo"><a href="http://www.youtube.com/watch?v=fS1uDnIPTvo">Привет мир</a></h2>
 
         </section>
       </main>
@@ -177,12 +176,12 @@
           </a>
         </li>
         <li>
-          <a href='/about/experience'>
+          <a href='/about'>
             Резюме
           </a>
         </li>
         <li>
-          <a class='english language' href='/en'>in english</a><a class='english language icon' href='/en'></a></li>
+          <a class='english language' href="/en/video/great-video/index.html">in english</a><a class='english language icon' href="/en/video/great-video/index.html"></a></li>
       </menu>
     </footer>
   </body>
