make page absolute links

--- a/output/ru/index.html
+++ b/output/ru/index.html
@@ -24,7 +24,7 @@
     <link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300&amp;subset=latin,cyrillic' rel='stylesheet' />
     <meta content='text/html; charset=utf-8' http-equiv='Content-Type' />
   </head>
-  <body class='ru'>
+  <body class=' ru'>
     <div id='root'>
       <header>
         <section>
@@ -50,7 +50,7 @@
                   </a>
                 </li>
                 <li>
-                  <a class='english language' href="ru/index.html">in english</a><a class='english language icon' href="ru/index.html"></a></li>
+                  <a class='english language' href="/en/index.html">in english</a><a class='english language icon' href="/en/index.html"></a></li>
               </menu>
             </nav>
           </div>
@@ -302,7 +302,7 @@
           </a>
         </li>
         <li>
-          <a class='english language' href="ru/index.html">in english</a><a class='english language icon' href="ru/index.html"></a></li>
+          <a class='english language' href="/en/index.html">in english</a><a class='english language icon' href="/en/index.html"></a></li>
       </menu>
     </footer>
   </body>
