--- a/output/en/video/index.html
+++ b/output/en/video/index.html
@@ -24,7 +24,7 @@
     <link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300&amp;subset=latin,cyrillic' rel='stylesheet' />
     <meta content='text/html; charset=utf-8' http-equiv='Content-Type' />
   </head>
-  <body class='en video'>
+  <body class=' en video'>
     <div id='root'>
       <header>
         <section>
@@ -50,7 +50,7 @@
                   </a>
                 </li>
                 <li>
-                  <a class='russian language' href="en/video/index.html">по-русски</a><a class='russian language icon' href="en/video/index.html"></a></li>
+                  <a class='russian language' href="/ru/video/index.html">по-русски</a><a class='russian language icon' href="/ru/video/index.html"></a></li>
               </menu>
             </nav>
           </div>
