--- a/output/ru/backing/index.html
+++ b/output/ru/backing/index.html
@@ -2,7 +2,7 @@
   <head>
     <title>
       Звукорежиссер
-      &mdash; Александр Федоров
+      &mdash; Александр Фёдоров
     </title>
     <base href='/' />
     <script type='text/javascript'>
@@ -30,7 +30,7 @@
         <section>
           <div class='left'>
             <h1>
-              <a href='/about/'>Александр Федоров</a><span>,
+              <a href='/about/'>Александр Фёдоров</a><span>,
               <a href='/about/profession/'>звукорежиссёр</a></span></h1>
             <nav>
               <menu>
@@ -178,7 +178,7 @@
   <dt>Ударные</dt>
   <dd>Алексей Палицын</dd>
   <dt>Запись и сведение</dt>
-  <dd>Александр Федоров</dd>
+  <dd>Александр Фёдоров</dd>
 </dl>
 
   </li>
@@ -197,7 +197,7 @@
   <dt>Ударные</dt>
   <dd>Алексей Палицын</dd>
   <dt>Запись и сведение</dt>
-  <dd>Александр Федоров</dd>
+  <dd>Александр Фёдоров</dd>
 </dl>
 
   </li>
@@ -216,7 +216,7 @@
   <dt>Ударные</dt>
   <dd>Алексей Палицын</dd>
   <dt>Запись и сведение</dt>
-  <dd>Александр Федоров</dd>
+  <dd>Александр Фёдоров</dd>
 </dl>
 
   </li>
@@ -234,7 +234,7 @@
       <div id='footer-pusher'></div>
     </div>
     <footer>
-      <p><a href='/about/'>Александр Федоров</a></p>
+      <p><a href='/about/'>Александр Фёдоров</a></p>
       <menu>
         <li class='selected'>
           <a href='/'>
