--- a/output/ru/audio/voice/best-thing/index.html
+++ b/output/ru/audio/voice/best-thing/index.html
@@ -2,7 +2,7 @@
   <head>
     <title>
       Voice
-      &mdash; Александр Федоров
+      &mdash; Александр Фёдоров
     </title>
     <base href='/' />
     <script type='text/javascript'>
@@ -30,7 +30,7 @@
         <section>
           <div class='left'>
             <h1>
-              <a href='/about/'>Александр Федоров</a><span>,
+              <a href='/about/'>Александр Фёдоров</a><span>,
               <a href='/about/profession/'>звукорежиссёр</a></span></h1>
             <nav>
               <menu>
@@ -137,7 +137,7 @@
       <div id='footer-pusher'></div>
     </div>
     <footer>
-      <p><a href='/about/'>Александр Федоров</a></p>
+      <p><a href='/about/'>Александр Фёдоров</a></p>
       <menu>
         <li class='selected'>
           <a href='/'>
