update read me again

--- a/output/ru/about/site/index.html
+++ b/output/ru/about/site/index.html
@@ -261,25 +261,27 @@ input/about/photo.jpg   -&gt; alexandrfedorov.ru/about/photo.jpg
   <li>
     <p>Rubygems - набор инструментов для компиляции сайта. Скопируйте следующий кусок в терминал и дождитесь завершения установки</p>
 
-    <p>gem install jekyll
-  gem install jekyll_ext
-  gem install sass
-  gem install haml
-  gem install compass
-  gem install compass-recipes
-  gem install sassy-buttons
-  gem install jekyll-haml
-  gem install kramdown</p>
+    <pre><code>gem install jekyll
+gem install jekyll_ext
+gem install sass
+gem install haml
+gem install compass
+gem install compass-recipes
+gem install sassy-buttons
+gem install jekyll-haml
+gem install kramdown
+</code></pre>
   </li>
   <li>
     <p>Склонировать с github текущую версию сайта. Скопируйте в терминал. </p>
 
-    <p>cd ~
-  mkdir Sites
-  cd Sites
-  git clone git@github.com:alexandrfedorov/alexandrfedorov.github.com.git
-  cd alexandrfedorov.github.com
-  git checkout gh-pages</p>
+    <pre><code>cd ~
+mkdir Sites
+cd Sites
+git clone git@github.com:alexandrfedorov/alexandrfedorov.github.com.git
+cd alexandrfedorov.github.com
+git checkout gh-pages
+</code></pre>
   </li>
 </ul>
 
